# learning-cmake

./: .gitignore  CMakeLists.txt  README.md
01_basic/: CMakeLists.txt  main.cpp
01_install_and_basic/: CMakeLists.txt  main.cpp  readme.md
01_install_and_demo/: CMakeLists.txt  readme.md
01_simple_test/: CMakeLists.txt  main.cpp  readme.md
02_config/: CMakeLists.txt  main.cpp
02_message/: CMakeLists.txt
02_set_var/: CMakeLists.txt  readme.md
03_search_source/: CMakeLists.txt
03_search_source/src/: main.cpp
03_search_source/src/calc/: Add.cpp  Add.h
03_varaiable/: CMakeLists.txt
04_include_headers/: CMakeLists.txt
04_include_headers/src/: main.cpp
04_list/: CMakeLists.txt
05_build_static_lib/: CMakeLists.txt
05_build_static_lib/src/: main.cpp
05_if/: CMakeLists.txt
06_build_dynamic_lib/: CMakeLists.txt
06_build_dynamic_lib/include/: Add.h
06_build_dynamic_lib/src/calc/: Add.cpp
06_loop/: CMakeLists.txt
07_config/: CMakeLists.txt  main.cpp
07_test_static_lib/: CMakeLists.txt
08_search_source/: CMakeLists.txt
08_search_source/src/: main.cpp
08_test_dynamic_lib/: CMakeLists.txt  readme.md
08_test_dynamic_lib/include/: LibMacros.h
09_include_headers/: CMakeLists.txt  readme.md
09_string_operation/: CMakeLists.txt
10_add_definitions/: CMakeLists.txt
11_add_subdirectory/calc/: Sub.cpp
11_add_subdirectory/include/: Sort.h
11_add_subdirectory/sort/: Sort.cpp
11_add_subdirectory/test02/: CMakeLists.txt
11_test_static_lib/: CMakeLists.txt
11_test_static_lib/lib/: calc.lib
12_build_dynamic_lib/: CMakeLists.txt  readme.md
12_build_dynamic_lib/src/calc/: Sub.cpp
13_test_dynamic_lib/: CMakeLists.txt
14_add_definitions/: CMakeLists.txt
15_add_subdirectory/: readme.md
15_add_subdirectory/calc/: CMakeLists.txt
15_add_subdirectory/scope_test/: CMakeLists.txt
15_add_subdirectory/test01/: CMakeLists.txt
16_execute_process/: CMakeLists.txt
17_target/: CMakeLists.txt
18_interface_target/: CMakeLists.txt  readme.md
19_import_target/: main.cpp
20_object_target/: CMakeLists.txt
20_object_target/merge_libs/include/: CMakeLists.txt
21_alias_target/: CMakeLists.txt
22_config_and_templates/: CMakeLists.txt
22_config_and_templates/cmake/templates/: Config.h.in
23_function/: CMakeLists.txt
24_macro/: CMakeLists.txt
25_find_package/: CMakeLists.txt
26_findXxx_cmake/libs/calc/lib/: calc.lib
27_findXxx_cmake_with_config/: CMakeLists.txt  main.cpp  readme.md
27_findXxx_cmake_with_config/cmake/: FindCalc.cmake
27_findXxx_cmake_with_config/libs/calc/include/: Sub.h
28_generator_expression/: CMakeLists.txt
29_install/: CMakeLists.txt
30_export/: CMakeLists.txt
31_XxxConfig_cmake/: CMakeLists.txt
31_XxxConfig_cmake/cmake/: CalcConfig.cmake  CalcConfig.cmake.in
31_XxxConfig_cmake/test/: CMakeLists.txt
32_fetch_content/: CMakeLists.txt
33_CTest/: CMakeLists.txt
34_CPack/: CMakeLists.txt
lesson01_install_and_demo/: CMakeLists.txt
lesson02_message/: CMakeLists.txt  readme.md
lesson03_varaiable/: CMakeLists.txt
lesson04_list/: CMakeLists.txt
lesson05_if/: CMakeLists.txt
lesson06_loop/: CMakeLists.txt
lesson07_config/: CMakeLists.txt
lesson08_search_source/: CMakeLists.txt
lesson09_include_headers/: CMakeLists.txt
lesson09_include_headers/src/calc/: Add.cpp
lesson10_build_static_lib/src/: main.cpp
lesson11_test_static_lib/: CMakeLists.txt
lesson11_test_static_lib/include/: Sub.h
lesson12_build_dynamic_lib/: CMakeLists.txt
lesson13_test_dynamic_lib/: CMakeLists.txt
lesson14_add_definitions/: CMakeLists.txt
lesson15_add_subdirectory/: CMakeLists.txt
lesson15_add_subdirectory/calc/: CMakeLists.txt
lesson15_add_subdirectory/include/: Add.h
lesson15_add_subdirectory/sort/: CMakeLists.txt
lesson15_add_subdirectory/test02/: test02.cpp
lesson16_execute_process/: CMakeLists.txt  main.cpp
lesson17_target/: CMakeLists.txt
lesson19_import_target/: CMakeLists.txt
lesson20_object_target/merge_libs/: CMakeLists.txt
lesson20_object_target/merge_libs/add/: CMakeLists.txt
lesson20_object_target/merge_libs/sub/: CMakeLists.txt  Sub.cpp
lesson22_config_and_templates/config/: Config.h
lesson23_function/: CMakeLists.txt
lesson24_macro/core1/: CMakeLists.txt
lesson24_macro/core1/include/: core1.h
lesson24_macro/core1/src/: core1.cpp
lesson24_macro/core2/: CMakeLists.txt
lesson24_macro/core2/src/: core_cal.cpp
lesson26_findXxx_cmake/: CMakeLists.txt
lesson26_findXxx_cmake/cmake/: FindCalc.cmake
lesson27_findXxx_cmake_with_config/libs/calc/lib/Debug/: calc.exp
lesson27_findXxx_cmake_with_config/libs/calc/lib/Release/: calc.exp
lesson28_generator_expression/: CMakeLists.txt
lesson29_install/: CMakeLists.txt  readme.md
lesson30_export/: CMakeLists.txt
lesson31_XxxConfig_cmake/: readme.md
lesson35_project/: CMakeLists.txt
lesson35_project/cmake/: compile_copy_shader.cmake  import_glfw.cmake  import_glm.cmake  import_ncnn.cmake  import_opencv.cmake  import_vklite.cmake  import_vulkan.cmake
lesson35_project/cmake/import/: import_ncnn.cmake  import_opencv.cmake  import_vklite.cmake
